Fixed alignment of modular image

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -110,11 +110,6 @@
         text-align:center;
     }
     
-    .bx-wrapper {
-        margin-top:100px;
-        padding:0;
-        vertical-align: bottom;
-    }
     
     .section-easy-setup h3{
         text-align: center;
